feat(ui): implementa tema oscuro y rediseño de pantalla de login
Se ha actualizado la interfaz de usuario para una experiencia más moderna y atractiva con la implementación de un tema oscuro.

- Cambia el tema base de la aplicación a oscuro con un color primario rojo.
- Rediseña completamente la pantalla de login, incluyendo la disposición y el estilo de los elementos.
- Reubica la imagen `logo.png` a la carpeta `Assets/Image` para una mejor organización.
- Elimina el archivo `cacel.png` obsoleto del proyecto.
- Añade la visualización de la versión de la aplicación en la pantalla de login.

--- a/CacelApp/CacelApp.csproj
+++ b/CacelApp/CacelApp.csproj
@@ -10,8 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Views\Modulos\Login\cacel.png" />
-    <None Remove="Views\Modulos\Login\logo.png" />
+    <None Remove="Assets\Image\logo.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,8 +31,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Views\Modulos\Login\cacel.png" />
-    <Resource Include="Views\Modulos\Login\logo.png" />
+    <Resource Include="Assets\Image\logo.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
