feat(app): implementa manejo global de errores, dialogs y carga
Se mejora la robustez de la aplicación y la experiencia de usuario al centralizar la gestión de errores, diálogos y estados de carga. Esto proporciona feedback consistente al usuario y simplifica el desarrollo de ViewModels.

- Configura manejo de excepciones globales en `App.xaml.cs` para `AppDomain` y `Dispatcher`.
- Integra `IDialogService` e `ILoadingService` a través de inyección de dependencias.
- Implementa `DialogHost` y un overlay de carga global en `MainWindow.xaml`.
- Refactoriza ViewModels para heredar de `ViewModelBase`, facilitando la gestión de estados compartidos.
- Añade referencias a los proyectos `Core` y `WebApi`.

--- a/CacelApp/CacelApp.csproj
+++ b/CacelApp/CacelApp.csproj
@@ -26,6 +26,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core\Core\Core.csproj" />
+    <ProjectReference Include="..\Infrastructure\WebApi\WebApi.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Assets\Image\logo.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
