--- a/Infrastructure/WebApi/WebApi.csproj
+++ b/Infrastructure/WebApi/WebApi.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <Folder Include="Dto\" />
-    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Core\Core.csproj" />
   </ItemGroup>
 
 </Project>
