--- a/CacelApp/CacelApp.csproj
+++ b/CacelApp/CacelApp.csproj
@@ -27,7 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core\Core.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Infrastructure\Services\Services.csproj" />
     <ProjectReference Include="..\Infrastructure\WebApi\WebApi.csproj" />
   </ItemGroup>
 
