feat(ui): integra visor PDF con WebView2 y refactoriza API Balanza
Se mejora la experiencia de visualización de documentos PDF al integrarlos directamente en la aplicación, eliminando la dependencia de visores externos. Además, se actualiza el repositorio de reportes de Balanza para utilizar un servicio de autenticación centralizado y se optimizan sus endpoints.

- Añade el paquete `Microsoft.Web.WebView2` para capacidades de navegador embebido.
- Reemplaza la apertura de PDF en visor externo por la visualización directa con `WebView2` en `PdfViewerWindow`.
- Ajusta el tamaño de la ventana `PdfViewerWindow` y actualiza textos de carga.
- Refactoriza `BalanzaReportRepository` para inyectar `IAuthService` y obtener clientes autenticados.
- Actualiza los endpoints para la generación de reportes PDF y estadísticas en `BalanzaReportRepository`.
- Elimina la funcionalidad de generación de reportes Excel en `BalanzaReportRepository`.

--- a/CacelApp/CacelApp.csproj
+++ b/CacelApp/CacelApp.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2792.45" />
   </ItemGroup>
 
   <ItemGroup>
