refactor(balanza): centraliza la gestión de registros en ventana dedicada
Se refactoriza la lógica de creación y edición de registros de balanza para consolidarla en una única ventana de mantenimiento. Esto mejora la coherencia del UI/UX y la mantenibilidad del código.

- Reemplaza la lógica interna de `NuevoRegistroCommand` y `EditarRegistroCommand` por la apertura de `MantBalanzaWindow`.
- Integra `MantBalanzaViewModel` para la gestión unificada de datos y estado del formulario.
- Añade `BoolToColorConverter` y `EnumToBoolConverter` como recursos para soporte de UI.
- Incluye nuevas imágenes de camiones en el proyecto (`truck_1.png` a `truck_8.png`).

--- a/CacelApp/CacelApp.csproj
+++ b/CacelApp/CacelApp.csproj
@@ -37,6 +37,14 @@
     <Resource Include="Assets\Image\logo.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Assets\Image\trucks\truck_1.png" />
+    <Resource Include="Assets\Image\trucks\truck_2.jpg" />
+    <Resource Include="Assets\Image\trucks\truck_3.png" />
+    <Resource Include="Assets\Image\trucks\truck_4.png" />
+    <Resource Include="Assets\Image\trucks\truck_5.png" />
+    <Resource Include="Assets\Image\trucks\truck_6.png" />
+    <Resource Include="Assets\Image\trucks\truck_7.png" />
+    <Resource Include="Assets\Image\trucks\truck_8.png" />
   </ItemGroup>
 
   <ItemGroup>
