feat(config): implementa gestión dinámica de configuración y entornos
Se refactoriza la gestión de configuración para permitir la carga dinámica de ajustes desde archivos y la selección de entorno (DEV/PROD) en tiempo de ejecución. Esto mejora la flexibilidad y mantenibilidad de la aplicación.

- Elimina la clase `AppConfiguration.cs` y el hardcoding de URLs de API.
- Introduce `appsettings.json` para definir URLs de API por entorno (Development/Production).
- `IConfigurationService` ahora es responsable de cargar las configuraciones y determinar la URL de API actual basándose en el entorno.
- El `HttpClient` se configura con una URL base dinámica que se adapta al entorno seleccionado.
- Se añade interfaz de usuario en MainWindow y el módulo de Configuración para permitir la selección del entorno (DEV/PROD), mostrando un distintivo visual (`badge`).
- La entidad `SedeConfig` se extiende con la propiedad `TipoSede`, lo que permite validaciones y comportamientos dinámicos de la UI (ej., máximo de balanzas permitidas, visibilidad de cámaras).
- `ImageLoaderService` ahora utiliza `IConfigurationService` para obtener la URL del servidor FTP, haciéndola configurable.
- Se añade `IModuleDeviceValidator` para futuras validaciones de dispositivos por módulo.

--- a/CacelApp/CacelApp.csproj
+++ b/CacelApp/CacelApp.csproj
@@ -51,6 +51,9 @@
     <None Update="Assets\Image\cacel.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
