feat(dashboard): integra lectura de balanzas y estado en tiempo real
El dashboard ahora muestra el estado y peso de las balanzas en tiempo real, utilizando la configuración activa y el servicio de puerto serie. Esto reemplaza la simulación de datos previa y mejora la visibilidad operativa del sistema.

- Integra ISerialPortService para la lectura de pesos en vivo.
- Actualiza el peso y estado (en línea/fuera de línea) de las balanzas en la UI.
- Implementa una vista de estado vacío si no hay balanzas configuradas.
- Carga dinámicamente las balanzas y cámaras desde el servicio de configuración activa.
- Remueve la simulación de datos de balanzas y estadísticas fijas del dashboard.
- Añade convertidores CountToVisibilityConverter para controlar la visibilidad de UI.
- Permite puertos nulos en la configuración de DVR para mayor flexibilidad.
- Incluye appsettings.example.json para facilitar la referencia de configuración.

--- a/CacelApp/CacelApp.csproj
+++ b/CacelApp/CacelApp.csproj
@@ -48,6 +48,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.example.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Image\cacel.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
