--- a/CacelApp/CacelApp.csproj
+++ b/CacelApp/CacelApp.csproj
@@ -59,5 +59,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-
+	<ItemGroup>
+		<None Update="SDK\Dahua\*.dll">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 </Project>
