Refactor camera streaming initialization and logging
Improves error handling and logging in camera streaming initialization. Refactors DashboardModel to better handle DVR and camera streaming setup, and enhances CameraService with clearer SDK initialization, login management, and debug output. Updates project file to link Dahua SDK DLLs for output.

--- a/CacelApp/CacelApp.csproj
+++ b/CacelApp/CacelApp.csproj
@@ -61,10 +61,9 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="Config\SDK\Dahua\" />
-	</ItemGroup>
-	<ItemGroup>
 		<None Update="Config\SDK\Dahua\*.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<Link>%(Filename)%(Extension)</Link>
 		</None>
 	</ItemGroup>
 
